# ml-project-template

./: .dvcignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  codeql.yml  docker.yml  docs.yml
configs/: config.yaml
k8s/: deployment.yaml  hpa.yaml  service.yaml
models/: README.md
src/: __init__.py  api.py
src/data/: __init__.py  load.py
src/features/: build_features.py
src/models/: __init__.py  predict.py  train.py
src/utils/: __init__.py  io.py  logging.py
tests/: __init__.py  test_smoke.py
